# rig

./: .gitignore  COLLECTING.md  README.md  pyproject.toml
deploy/: 99-esp-scale.rules  drobit-rig-autostart.service
drobit_rig/: __init__.py  cli.py  config.py  events.py  logging_setup.py  protocol.py  scale_reader.py  session.py  video.py
drobit_rig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: fake_esp.py  fake_rpicam.py  test_events.py  test_integration.py  test_parquet_sink.py  test_protocol.py  test_session.py  test_temperature.py  test_video.py
