[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drobit-rig"
version = "0.1.0"
description = "Raw data collection rig for poultry scale development (ESP32 load cell + Pi camera)"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
drobit-rig = "drobit_rig.cli:main"

[tool.setuptools]
packages = ["drobit_rig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
